--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1 class="animate__animated animate__bounce">Brian Sanchez</h1>
             <h4 class="animate__animated animate__zoomInDown">Full Stack Web Developer</h4>
             <br>
-            <a href="/Portfolio/assets/pdf/Brian Sanchez CV.pdf" class="btn-cv" download="Brian Sanchez.pdf">Descargar CV</a>
+            <a href="/Portfolio/assets/pdf/Brian Sanchez.pdf" class="btn-cv" download="Brian Sanchez.pdf">Descargar CV</a>
         </div>
 
         <video onloadeddata="this.muted" autoplay loop>
