Update index html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#Inicio" class="menu">Inicio</a></li>
                 <li><a href="#Sobre-mi" class="menu">Sobre mí</a></li>
                 <li><a href="#Educacion" class="menu">Educacion</a></li>
-                <li><a href="#Educacion" class="menu">Skills</a></li>
+                <li><a href="#Skills" class="menu">Skills</a></li>
                 <!-- <li><a href="#Portfolio">Portfolio</a></li> -->
              </ul>
 
