--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="caja1">
                 <h2>Sobre mí</h2>
                 <hr><br>
-                <p>Mi nombre es Brian Sanchez y soy una persona autodidacta, entusiasta, apasionada, dedicada y con muchas ganas de aprender día a día nuevas tecnologías para el crecimiento de mi formación como profesional. <br><br> Actualmente me encuentro en la búsqueda de mi primer empleo como Desarrollador Web, Full Stack o Front End con muchas ganas de trabajar en equipo 🤝 y cumplir todas las metas propuestas en el camino.</p>
+                <p>Hola!👋 <br><br> Mi nombre es Brian Sanchez y soy una persona autodidacta, entusiasta, apasionada, dedicada y con muchas ganas de aprender día a día nuevas tecnologías para el crecimiento de mi formación como profesional. <br><br> Actualmente me encuentro en la búsqueda de mi primer empleo como Desarrollador Web, Full Stack o Front End con muchas ganas de trabajar en equipo 🤝 y cumplir todas las metas propuestas en el camino.</p>
             </div>
 
             <div class="caja2">
@@ -212,7 +212,7 @@
         <!-- <article id="Portfolio">
             <h2>Portfolio</h2>
             
-            Proximamente pondre aqui mis proyectos mediante React :D
+            "Proximamente pondre aqui mis proyectos mediante React :D"
 
         </article> -->
         <br><br>
