--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
                         <img src="" alt="" class="skill-image2"> 
                        </div> -->
 
+                  <!-- <div class="PHP">  "Lenguaje a capacitarme mas tarde"
+                        <img src="" alt="" class="skill-image">
+                        <img src="" alt="" class="skill-image2"> 
+                       </div> -->
+
                 </div>
                 
 
