--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             <a href="/Portfolio/assets/pdf/Brian Sanchez.pdf" class="btn-cv" download="Brian Sanchez.pdf">Descargar CV</a>
         </div>
 
-        <video onloadeddata="this.muted" autoplay loop>
-          <source src="/Portfolio/assets/video/code.mp4">
-        </video>
+        <video src="/Portfolio/assets/video/code.mp4" muted autoplay loop></video>
 
     </header>
 
