--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <li><a href="#Sobre-mi" class="pagina">Sobre mí</a></li>
                 <li><a href="#Educacion" class="pagina">Educacion</a></li>
                 <li><a href="#Skills" class="pagina">Skills</a></li>
-                <!-- <li><a href="#Portfolio" class="pagina">Portfolio</a></li> -->
+                <li><a href="#Portfolio" class="pagina">Portfolio</a></li>
+                <li><a href="#Portfolio" class="pagina">Informacion</a></li> 
              </ul>
 
         </nav>
