--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="animate__animated animate__bounce" id="nombre">Brian Sanchez</h1>
             <h4 class="animate__animated animate__zoomInDown" id="formacion">Full Stack Web Developer</h4>
             <br>
-            <a href="/Portfolio/assets/pdf/Brian Sanchez.pdf" class="btn-cv" download="Brian Sanchez.pdf">Descargar CV</a>
+            <a href="/assets/pdf/Brian sanchez CV.pdf" class="btn-cv" download="Brian Sanchez.pdf">Descargar CV</a>
         </div>
 
         <video src="/Portfolio/assets/video/code.mp4" muted autoplay loop></video>
